--- a/index.html
+++ b/index.html
@@ -1,73 +1,143 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-	<title>Banderas de clanes</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Clanes</title>
+	<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<div class="parent">
-		<div class="div1"><img src="Abeja.png"></div>
-		<div class="div2"><img src="Águila.png"></div>
-		<div class="div3"><img src="Araña.png"></div>
-		<div class="div4"><img src="Bisonte.png"></div>
-		<div class="div5"><img src="Búfalo.png"></div>
-		<div class="div6"><img src="Cabra.png"></div>
-		<div class="div7"><img src="Carnero.png"></div>
-		<div class="div8"><img src="Castor.png"></div>
-		<div class="div9"><img src="Cerdo.png"></div>
-		<div class="div10"><img src="Cerbero.png"></div>
-		<div class="div11"><img src="Cobra.png"></div>
-		<div class="div12"><img src="Cocodrilo.png"></div>
-		<div class="div13"><img src="Conejo.png"></div>
-		<div class="div14"><img src="Cuervo.png"></div>
-		<div class="div15"><img src="Dinosaurio.png"></div>
-		<div class="div16"><img src="Dragón.png"></div>
-		<div class="div17"><img src="Elefante.png"></div>
-		<div class="div18"><img src="Esfinge.png"></div>
-		<div class="div19"><img src="Fénix.png"></div>
-		<div class="div20"><img src="Foca.png"></div>
-		<div class="div21"><img src="Gallo.png"></div>
-		<div class="div22"><img src="Gato.png"></div>
-		<div class="div23"><img src="Goblin.png"></div>
-		<div class="div24"><img src="Guepardo.png"></div>
-		<div class="div25"><img src="Halcón.png"></div>
-		<div class="div26"><img src="Hámster.png"></div>
-		<div class="div27"><img src="Hiena.png"></div>
-		<div class="div28"><img src="Jafuar.png"></div>
-		<div class="div29"><img src="Jirafa.png"></div>
-		<div class="div30"><img src="Koala.png"></div>
-		<div class="div31"><img src="Komodo.png"></div>
-		<div class="div32"><img src="León.png"></div>
-		<div class="div33"><img src="Lince.png"></div>
-		<div class="div34"><img src="Lobo.png"></div>
-		<div class="div35"><img src="Mamut.png"></div>
-		<div class="div36"><img src="Mapache.png"></div>
-		<div class="div37"><img src="Orca.png"></div>
-		<div class="div38"><img src="Oso.png"></div>
-		<div class="div39"><img src="Paloma.png"></div>
-		<div class="div40"><img src="Panda.png"></div>
-		<div class="div41"><img src="Pantera.png"></div>
-		<div class="div42"><img src="Pato.png"></div>
-		<div class="div43"><img src="Pegaso.png"></div>
-		<div class="div44"><img src="Perico.png"></div>
-		<div class="div45"><img src="Perro.png"></div>
-		<div class="div46"><img src="Pulpo.png"></div>
-		<div class="div47"><img src="Raptor.png"></div>
-		<div class="div48"><img src="Rinoceronte.png"></div>
-		<div class="div49"><img src="Tiburón.png"></div>
-		<div class="div50"><img src="Tigre.png"></div>
-		<div class="div51"><img src="Toro.png"></div>
-		<div class="div52"><img src="Tortuga.png"></div>
-		<div class="div53"><img src="Tucán.png"></div>
-		<div class="div54"><img src="Unicornio.png"></div>
-		<div class="div55"><img src="Vaca.png"></div>
-		<div class="div56"><img src="Venado.png"></div>
-		<div class="div57"><img src="Yeti.png"></div>
-		<div class="div58"><img src="Zorro.png"></div>
+	<div class="container">
+		<header>
+			<h1>Banderas de los clanes</h1>
+		</header>
+		<main class="gallery">
+			<figure class="div1"><img src="Abeja.png"></figure>
+				<figure class="div2"><img src="Águila.png"></figure>
+				<figure class="div3"><img src="Araña.png"></figure>
+				<figure class="div4"><img src="Bisonte.png"></figure>
+				<figure class="div5"><img src="Búfalo.png"></figure>
+				<figure class="div6"><img src="Cabra.png"></figure>
+				<figure class="div7"><img src="Carnero.png"></figure>
+				<figure class="div8"><img src="Castor.png"></figure>
+				<figure class="div9"><img src="Cerdo.png"></figure>
+				<figure class="div10"><img src="Cerbero.png"></figure>
+				<figure class="div11"><img src="Cobra.png"></figure>
+				<figure class="div12"><img src="Cocodrilo.png"></figure>
+				<figure class="div13"><img src="Conejo.png"></figure>
+				<figure class="div14"><img src="Cuervo.png"></figure>
+				<figure class="div15"><img src="Dinosaurio.png"></figure>
+				<figure class="div16"><img src="Dragón.png"></figure>
+				<figure class="div17"><img src="Elefante.png"></figure>
+				<figure class="div18"><img src="Esfinge.png"></figure>
+				<figure class="div19"><img src="Fénix.png"></figure>
+				<figure class="div20"><img src="Foca.png"></figure>
+				<figure class="div21"><img src="Gallo.png"></figure>
+				<figure class="div22"><img src="Gato.png"></figure>
+				<figure class="div23"><img src="Goblin.png"></figure>
+				<figure class="div24"><img src="Guepardo.png"></figure>
+				<figure class="div25"><img src="Halcón.png"></figure>
+				<figure class="div26"><img src="Hámster.png"></figure>
+				<figure class="div27"><img src="Hiena.png"></figure>
+				<figure class="div28"><img src="Jafuar.png"></figure>
+				<figure class="div29"><img src="Jirafa.png"></figure>
+				<figure class="div30"><img src="Koala.png"></figure>
+				<figure class="div31"><img src="Komodo.png"></figure>
+				<figure class="div32"><img src="León.png"></figure>
+				<figure class="div33"><img src="Lince.png"></figure>
+				<figure class="div34"><img src="Lobo.png"></figure>
+				<figure class="div35"><img src="Mamut.png"></figure>
+				<figure class="div36"><img src="Mapache.png"></figure>
+				<figure class="div37"><img src="Orca.png"></figure>
+				<figure class="div38"><img src="Oso.png"></figure>
+				<figure class="div39"><img src="Paloma.png"></figure>
+				<figure class="div40"><img src="Panda.png"></figure>
+				<figure class="div41"><img src="Pantera.png"></figure>
+				<figure class="div42"><img src="Pato.png"></figure>
+				<figure class="div43"><img src="Pegaso.png"></figure>
+				<figure class="div44"><img src="Perico.png"></figure>
+				<figure class="div45"><img src="Perro.png"></figure>
+				<figure class="div46"><img src="Pulpo.png"></figure>
+				<figure class="div47"><img src="Raptor.png"></figure>
+				<figure class="div48"><img src="Rinoceronte.png"></figure>
+				<figure class="div49"><img src="Tiburón.png"></figure>
+				<figure class="div50"><img src="Tigre.png"></figure>
+				<figure class="div51"><img src="Toro.png"></figure>
+				<figure class="div52"><img src="Tortuga.png"></figure>
+				<figure class="div53"><img src="Tucán.png"></figure>
+				<figure class="div54"><img src="Unicornio.png"></figure>
+				<figure class="div55"><img src="Vaca.png"></figure>
+				<figure class="div56"><img src="Venado.png"></figure>
+				<figure class="div57"><img src="Yeti.png"></figure>
+				<figure class="div58"><img src="Zorro.png"></figure>
+		</main>
+		<footer>
+			<small></small>
+		</footer>
 	</div>
-
 </body>
-
 </html>
+
+
+
+
+<!-- <figure class="div1"><img src="Abeja.png"></div>
+		<figure class="div2"><img src="Águila.png"></div>
+		<figure class="div3"><img src="Araña.png"></div>
+		<figure class="div4"><img src="Bisonte.png"></div>
+		<figure class="div5"><img src="Búfalo.png"></div>
+		<figure class="div6"><img src="Cabra.png"></div>
+		<figure class="div7"><img src="Carnero.png"></div>
+		<figure class="div8"><img src="Castor.png"></div>
+		<figure class="div9"><img src="Cerdo.png"></div>
+		<figure class="div10"><img src="Cerbero.png"></div>
+		<figure class="div11"><img src="Cobra.png"></div>
+		<figure class="div12"><img src="Cocodrilo.png"></div>
+		<figure class="div13"><img src="Conejo.png"></div>
+		<figure class="div14"><img src="Cuervo.png"></div>
+		<figure class="div15"><img src="Dinosaurio.png"></div>
+		<figure class="div16"><img src="Dragón.png"></div>
+		<figure class="div17"><img src="Elefante.png"></div>
+		<figure class="div18"><img src="Esfinge.png"></div>
+		<figure class="div19"><img src="Fénix.png"></div>
+		<figure class="div20"><img src="Foca.png"></div>
+		<figure class="div21"><img src="Gallo.png"></div>
+		<figure class="div22"><img src="Gato.png"></div>
+		<figure class="div23"><img src="Goblin.png"></div>
+		<figure class="div24"><img src="Guepardo.png"></div>
+		<figure class="div25"><img src="Halcón.png"></div>
+		<figure class="div26"><img src="Hámster.png"></div>
+		<figure class="div27"><img src="Hiena.png"></div>
+		<figure class="div28"><img src="Jafuar.png"></div>
+		<figure class="div29"><img src="Jirafa.png"></div>
+		<figure class="div30"><img src="Koala.png"></div>
+		<figure class="div31"><img src="Komodo.png"></div>
+		<figure class="div32"><img src="León.png"></div>
+		<figure class="div33"><img src="Lince.png"></div>
+		<figure class="div34"><img src="Lobo.png"></div>
+		<figure class="div35"><img src="Mamut.png"></div>
+		<figure class="div36"><img src="Mapache.png"></div>
+		<figure class="div37"><img src="Orca.png"></div>
+		<figure class="div38"><img src="Oso.png"></div>
+		<figure class="div39"><img src="Paloma.png"></div>
+		<figure class="div40"><img src="Panda.png"></div>
+		<figure class="div41"><img src="Pantera.png"></div>
+		<figure class="div42"><img src="Pato.png"></div>
+		<figure class="div43"><img src="Pegaso.png"></div>
+		<figure class="div44"><img src="Perico.png"></div>
+		<figure class="div45"><img src="Perro.png"></div>
+		<figure class="div46"><img src="Pulpo.png"></div>
+		<figure class="div47"><img src="Raptor.png"></div>
+		<figure class="div48"><img src="Rinoceronte.png"></div>
+		<figure class="div49"><img src="Tiburón.png"></div>
+		<figure class="div50"><img src="Tigre.png"></div>
+		<figure class="div51"><img src="Toro.png"></div>
+		<figure class="div52"><img src="Tortuga.png"></div>
+		<figure class="div53"><img src="Tucán.png"></div>
+		<figure class="div54"><img src="Unicornio.png"></div>
+		<figure class="div55"><img src="Vaca.png"></div>
+		<figure class="div56"><img src="Venado.png"></div>
+		<figure class="div57"><img src="Yeti.png"></div>
+		<figure class="div58"><img src="Zorro.png"></div>
+ -->
