cambios y banderas nuevas

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,137 +8,552 @@
 	<title>Clanes</title>
 	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
+
+	<div class="container">
+		<h2 class="text-center">Banderas de los clanes</h2>
+		<div class="lightbox-gallery">
+			<div>
+				<img src="Abeja.png">
+				<h2>Abeja</h2>
+			</div>
+			<div>
+				<img src="Águila.png">
+				<h2>Águila</h2>
+			</div>
+			<div>
+				<img src="Alicornio.png">
+				<h2>Alicornio</h2>
+			</div>
+			<div>
+				<img src="Araña.png">
+				<h2>Araña</h2>
+			</div>
+			<div class="div60"><img src="Ardilla.png">
+				<h2>Ardilla</h2>
+			</div>
+
+			<div class="div4"><img src="Bisonte.png">
+				<h2>Bisonte</h2>
+			</div>
+
+			<div class="div5"><img src="Búfalo.png">
+				<h2>Búfalo</h2>
+			</div>
+
+			<div class="div6"><img src="Cabra.png">
+				<h2>Cabra</h2>
+			</div>
+
+			<div class="div7"><img src="Carnero.png">
+				<h2>Carnero</h2>
+			</div>
+
+			<div class="div8"><img src="Castor.png">
+				<h2>Castor</h2>
+			</div>
+
+			<div class="div8"><img src="Cebra.png">
+				<h2>Cebra</h2>
+			</div>
+
+			<div class="div9"><img src="Cerdo.png">
+				<h2>Cerdo</h2>
+			</div>
+
+			<div class="div10"><img src="Cerbero.png">
+				<h2>Cerbero</h2>
+			</div>
+
+			<div class="div11"><img src="Cobra.png">
+				<h2>Cobra</h2>
+			</div>
+
+			<div class="div12"><img src="Cocodrilo.png">
+				<h2>Cocodrilo</h2>
+			</div>
+
+			<div class="div13"><img src="Conejo.png">
+				<h2>Conejo</h2>
+			</div>
+
+			<div class="div14"><img src="Cuervo.png">
+				<h2>Cuervo</h2>
+			</div>
+
+			<div class="div15"><img src="Dinosaurio.png">
+				<h2>Dinosaurio</h2>
+			</div>
+
+			<div class="div16"><img src="Dragón.png">
+				<h2>Dragón</h2>
+			</div>
+
+			<div class="div17"><img src="Elefante.png">
+				<h2>Elefante</h2>
+			</div>
+
+			<div class="div18"><img src="Esfinge.png">
+				<h2>Esfinge</h2>
+			</div>
+
+			<div class="div61"><img src="Fauno.png">
+				<h2>Fauno</h2>
+			</div>
+
+			<div class="div19"><img src="Fénix.png">
+				<h2>Fénix</h2>
+			</div>
+
+			<div class="div62"><img src="Flamenco.png">
+				<h2>Flamenco</h2>
+			</div>
+
+			<div class="div20"><img src="Foca.png">
+				<h2>Foca</h2>
+			</div>
+
+			<div class="div21"><img src="Gallo.png">
+				<h2>Gallo</h2>
+			</div>
+
+			<div class="div22"><img src="Gato.png">
+				<h2>Gato</h2>
+			</div>
+
+			<div class="div23"><img src="Goblin.png">
+				<h2>Goblin</h2>
+			</div>
+
+			<div class="div24"><img src="Guepardo.png">
+				<h2>Guepardo</h2>
+			</div>
+
+			<div class="div25"><img src="Halcón.png">
+				<h2>Halcón</h2>
+			</div>
+
+			<div class="div26"><img src="Hámster.png">
+				<h2>Hámster</h2>
+			</div>
+
+			<div class="div27"><img src="Hiena.png">
+				<h2>Hiena</h2>
+			</div>
+
+			<div class="div63"><img src="Hipocampo.png">
+				<h2>Hipocampo</h2>
+			</div>
+
+			<div class="div64"><img src="Hydra2.png">
+				<h2>Hydra</h2>
+			</div>
+
+			<div class="div28"><img src="Jafuar.png">
+				<h2>Jafuar</h2>
+			</div>
+
+			<div class="div29"><img src="Jirafa.png">
+				<h2>Jirafa</h2>
+			</div>
+
+			<div class="div30"><img src="Koala.png">
+				<h2>Koala</h2>
+			</div>
+
+			<div class="div31"><img src="Komodo.png">
+				<h2>Komodo</h2>
+			</div>
+
+			<div class="div65"><img src="Kraken.png">
+				<h2>Kraken</h2>
+			</div>
+
+			<div class="div66"><img src="Lémur.png">
+				<h2>Lémur</h2>
+			</div>
+
+			<div class="div32"><img src="León.png">
+				<h2>León</h2>
+			</div>
+
+			<div class="div67"><img src="Libélula.png">
+				<h2>Libélula</h2>
+			</div>
+			<div class="div33"><img src="Lince.png">
+				<h2>Lince</h2>
+			</div>
+
+			<div class="div34"><img src="Lobo.png">
+				<h2>Lobo</h2>
+			</div>
+
+			<div class="div35"><img src="Mamut.png">
+				<h2>Mamut</h2>
+			</div>
+
+			<div class="div68"><img src="Mantis.png">
+				<h2>Mantis</h2>
+			</div>
+
+			<div class="div36"><img src="Mapache.png">
+				<h2>Mapache</h2>
+			</div>
+
+			<div class="div69"><img src="Medusa.png">
+				<h2>Medusa</h2>
+			</div>
+
+			<div class="div70"><img src="Minotauro.png">
+				<h2>Minotauro</h2>
+			</div>
+
+			<div class="div71"><img src="Nutria.png">
+				<h2>Nutria</h2>
+			</div>
+
+			<div class="div37"><img src="Orca.png">
+				<h2>Orca</h2>
+			</div>
+
+			<div class="div38"><img src="Oso.png">
+				<h2>Oso</h2>
+			</div>
+
+			<div class="div39"><img src="Paloma.png">
+				<h2>Paloma</h2>
+			</div>
+
+			<div class="div40"><img src="Panda.png">
+				<h2>Panda</h2>
+			</div>
+			<div class="div41"><img src="Pantera.png">
+				<h2>Pantera</h2>
+			</div>
+
+			<div class="div42"><img src="Pato.png">
+				<h2>Pato</h2>
+			</div>
+
+			<div class="div43"><img src="Pegaso.png">
+				<h2>Pegaso</h2>
+			</div>
+
+			<div class="div44"><img src="Perico.png">
+				<h2>Perico</h2>
+			</div>
+
+			<div class="div45"><img src="Perro.png">
+				<h2>Perro</h2>
+			</div>
+
+			<div class="div72"><img src="Pinguino.png">
+				<h2>Pingüino</h2>
+			</div>
+
+			<div class="div46"><img src="Pulpo.png">
+				<h2>Pulpo</h2>
+			</div>
+
+			<div class="div73"><img src="Quetzal.png">
+				<h2>Quetzal</h2>
+			</div>
+
+			<div class="div47"><img src="Raptor.png">
+				<h2>Raptor</h2>
+			</div>
+
+			<div class="div48"><img src="Rinoceronte.png">
+				<h2>Rinoceronte</h2>
+			</div>
+			<div class="div74"><img src="Sirena.png">
+				<h2>Sirena</h2>
+			</div>
+
+			<div class="div49"><img src="Tiburón.png">
+				<h2>Tiburón</h2>
+			</div>
+
+			<div class="div50"><img src="Tigre.png">
+				<h2>Tigre</h2>
+			</div>
+
+			<div class="div51"><img src="Toro.png">
+				<h2>Toro</h2>
+			</div>
+
+			<div class="div52"><img src="Tortuga.png">
+				<h2>Tortuga</h2>
+			</div>
+
+			<div class="div53"><img src="Tucán.png">
+				<h2>Tucán</h2>
+			</div>
+
+			<div class="div54"><img src="Unicornio.png">
+				<h2>Unicornio</h2>
+			</div>
+
+			<div class="div55"><img src="Vaca.png">
+				<h2>Vaca</h2>
+			</div>
+
+			<div class="div56"><img src="Venado.png">
+				<h2>Venado</h2>
+			</div>
+
+			<div class="div57"><img src="Yeti.png">
+				<h2>Yeti</h2>
+			</div>
+
+			<div class="div58"><img src="Zorro.png">
+				<h2>Zorro</h2>
+			</div>
+		</div>
+	</div>
+	</div>
+
+
+	<!-- 
+</div>
 	<div class="container">
 		<header>
 			<h1>Banderas de los clanes</h1>
 		</header>
-		<main class="gallery">
-			<figure class="div1"><img src="Abeja.png"></figure>
-				<figure class="div2"><img src="Águila.png"></figure>
-				<figure class="div3"><img src="Araña.png"></figure>
-				<figure class="div4"><img src="Bisonte.png"></figure>
-				<figure class="div5"><img src="Búfalo.png"></figure>
-				<figure class="div6"><img src="Cabra.png"></figure>
-				<figure class="div7"><img src="Carnero.png"></figure>
-				<figure class="div8"><img src="Castor.png"></figure>
-				<figure class="div9"><img src="Cerdo.png"></figure>
-				<figure class="div10"><img src="Cerbero.png"></figure>
-				<figure class="div11"><img src="Cobra.png"></figure>
-				<figure class="div12"><img src="Cocodrilo.png"></figure>
-				<figure class="div13"><img src="Conejo.png"></figure>
-				<figure class="div14"><img src="Cuervo.png"></figure>
-				<figure class="div15"><img src="Dinosaurio.png"></figure>
-				<figure class="div16"><img src="Dragón.png"></figure>
-				<figure class="div17"><img src="Elefante.png"></figure>
-				<figure class="div18"><img src="Esfinge.png"></figure>
-				<figure class="div19"><img src="Fénix.png"></figure>
-				<figure class="div20"><img src="Foca.png"></figure>
-				<figure class="div21"><img src="Gallo.png"></figure>
-				<figure class="div22"><img src="Gato.png"></figure>
-				<figure class="div23"><img src="Goblin.png"></figure>
-				<figure class="div24"><img src="Guepardo.png"></figure>
-				<figure class="div25"><img src="Halcón.png"></figure>
-				<figure class="div26"><img src="Hámster.png"></figure>
-				<figure class="div27"><img src="Hiena.png"></figure>
-				<figure class="div28"><img src="Jafuar.png"></figure>
-				<figure class="div29"><img src="Jirafa.png"></figure>
-				<figure class="div30"><img src="Koala.png"></figure>
-				<figure class="div31"><img src="Komodo.png"></figure>
-				<figure class="div32"><img src="León.png"></figure>
-				<figure class="div33"><img src="Lince.png"></figure>
-				<figure class="div34"><img src="Lobo.png"></figure>
-				<figure class="div35"><img src="Mamut.png"></figure>
-				<figure class="div36"><img src="Mapache.png"></figure>
-				<figure class="div37"><img src="Orca.png"></figure>
-				<figure class="div38"><img src="Oso.png"></figure>
-				<figure class="div39"><img src="Paloma.png"></figure>
-				<figure class="div40"><img src="Panda.png"></figure>
-				<figure class="div41"><img src="Pantera.png"></figure>
-				<figure class="div42"><img src="Pato.png"></figure>
-				<figure class="div43"><img src="Pegaso.png"></figure>
-				<figure class="div44"><img src="Perico.png"></figure>
-				<figure class="div45"><img src="Perro.png"></figure>
-				<figure class="div46"><img src="Pulpo.png"></figure>
-				<figure class="div47"><img src="Raptor.png"></figure>
-				<figure class="div48"><img src="Rinoceronte.png"></figure>
-				<figure class="div49"><img src="Tiburón.png"></figure>
-				<figure class="div50"><img src="Tigre.png"></figure>
-				<figure class="div51"><img src="Toro.png"></figure>
-				<figure class="div52"><img src="Tortuga.png"></figure>
-				<figure class="div53"><img src="Tucán.png"></figure>
-				<figure class="div54"><img src="Unicornio.png"></figure>
-				<figure class="div55"><img src="Vaca.png"></figure>
-				<figure class="div56"><img src="Venado.png"></figure>
-				<figure class="div57"><img src="Yeti.png"></figure>
-				<figure class="div58"><img src="Zorro.png"></figure>
+
+
+
+		<main class="gallery grid-gallery">
+			<div class="div1"><img src="Abeja.png"></div>
+			<h2>Abeja</h2>
+
+			<div class="div2"><img src="Águila.png"></div>
+			<h2>Águila</h2>
+
+			<div class="div59"><img src="Alicornio.png"></div>
+			<h2>Alicornio</h2>
+
+			<div class="div3"><img src="Araña.png"></div>
+			<h2>Araña</h2>
+
+			<div class="div60"><img src="Ardilla.png"></div>
+			<h2>Ardilla</h2>
+
+			<div class="div4"><img src="Bisonte.png"></div>
+			<h2>Bisonte</h2>
+
+			<div class="div5"><img src="Búfalo.png"></div>
+			<h2>Búfalo</h2>
+
+			<div class="div6"><img src="Cabra.png"></div>
+			<h2>Cabra</h2>
+
+			<div class="div7"><img src="Carnero.png"></div>
+			<h2>Carnero</h2>
+
+			<div class="div8"><img src="Castor.png"></div>
+			<h2>Castor</h2>
+
+			<div class="div8"><img src="Cebra.png"></div>
+			<h2>Cebra</h2>
+
+			<div class="div9"><img src="Cerdo.png"></div>
+			<h2>Cerdo</h2>
+
+			<div class="div10"><img src="Cerbero.png"></div>
+			<h2>Cerbero</h2>
+
+			<div class="div11"><img src="Cobra.png"></div>
+			<h2>Cobra</h2>
+
+			<div class="div12"><img src="Cocodrilo.png"></div>
+			<h2>Cocodrilo</h2>
+
+			<div class="div13"><img src="Conejo.png"></div>
+			<h2>Conejo</h2>
+
+			<div class="div14"><img src="Cuervo.png"></div>
+			<h2>Cuervo</h2>
+
+			<div class="div15"><img src="Dinosaurio.png"></div>
+			<h2>Dinosaurio</h2>
+
+			<div class="div16"><img src="Dragón.png"></div>
+			<h2>Dragón</h2>
+
+			<div class="div17"><img src="Elefante.png"></div>
+			<h2>Elefante</h2>
+
+			<div class="div18"><img src="Esfinge.png"></div>
+			<h2>Esfinge</h2>
+
+			<div class="div61"><img src="Fauno.png"></div>
+			<h2>Fauno</h2>
+
+			<div class="div19"><img src="Fénix.png"></div>
+			<h2>Fénix</h2>
+
+			<div class="div62"><img src="Flamenco.png"></div>
+			<h2>Flamenco</h2>
+
+			<div class="div20"><img src="Foca.png"></div>
+			<h2>Foca</h2>
+
+			<div class="div21"><img src="Gallo.png"></div>
+			<h2>Gallo</h2>
+
+			<div class="div22"><img src="Gato.png"></div>
+			<h2>Gato</h2>
+
+			<div class="div23"><img src="Goblin.png"></div>
+			<h2>Goblin</h2>
+
+			<div class="div24"><img src="Guepardo.png"></div>
+			<h2>Guepardo</h2>
+
+			<div class="div25"><img src="Halcón.png"></div>
+			<h2>Halcón</h2>
+
+			<div class="div26"><img src="Hámster.png"></div>
+			<h2>Hámster</h2>
+
+			<div class="div27"><img src="Hiena.png"></div>
+			<h2>Hiena</h2>
+
+			<div class="div63"><img src="Hipocampo.png"></div>
+			<h2>Hipocampo</h2>
+
+			<div class="div64"><img src="Hydra2.png"></div>
+			<h2>Hydra</h2>
+
+			<div class="div28"><img src="Jafuar.png"></div>
+			<h2>Jafuar</h2>
+
+			<div class="div29"><img src="Jirafa.png"></div>
+			<h2>Jirafa</h2>
+
+			<div class="div30"><img src="Koala.png"></div>
+			<h2>Koala</h2>
+
+			<div class="div31"><img src="Komodo.png"></div>
+			<h2>Komodo</h2>
+
+			<div class="div65"><img src="Kraken.png"></div>
+			<h2>Kraken</h2>
+
+			<div class="div66"><img src="Lémur.png"></div>
+			<h2>Lémur</h2>
+
+			<div class="div32"><img src="León.png"></div>
+			<h2>León</h2>
+
+			<div class="div67"><img src="Libélula.png"></div>
+			<h2>Libélula</h2>
+			<div class="div33"><img src="Lince.png"></div>
+			<h2>Lince</h2>
+
+			<div class="div34"><img src="Lobo.png"></div>
+			<h2>Lobo</h2>
+
+			<div class="div35"><img src="Mamut.png"></div>
+			<h2>Mamut</h2>
+
+			<div class="div68"><img src="Mantis.png"></div>
+			<h2>Mantis</h2>
+
+			<div class="div36"><img src="Mapache.png"></div>
+			<h2>Mapache</h2>
+
+			<div class="div69"><img src="Medusa.png"></div>
+			<h2>Medusa</h2>
+
+			<div class="div70"><img src="Minotauro.png"></div>
+			<h2>Minotauro</h2>
+
+			<div class="div71"><img src="Nutria.png"></div>
+			<h2>Nutria</h2>
+
+			<div class="div37"><img src="Orca.png"></div>
+			<h2>Orca</h2>
+
+			<div class="div38"><img src="Oso.png"></div>
+			<h2>Oso</h2>
+
+			<div class="div39"><img src="Paloma.png"></div>
+			<h2>Paloma</h2>
+
+			<div class="div40"><img src="Panda.png"></div>
+			<h2>Panda</h2>
+			<div class="div41"><img src="Pantera.png"></div>
+			<h2>Pantera</h2>
+
+			<div class="div42"><img src="Pato.png"></div>
+			<h2>Pato</h2>
+
+			<div class="div43"><img src="Pegaso.png"></div>
+			<h2>Pegaso</h2>
+
+			<div class="div44"><img src="Perico.png"></div>
+			<h2>Perico</h2>
+
+			<div class="div45"><img src="Perro.png"></div>
+			<h2>Perro</h2>
+
+			<div class="div72"><img src="Pinguino.png"></div>
+			<h2>Pingüino</h2>
+
+			<div class="div46"><img src="Pulpo.png"></div>
+			<h2>Pulpo</h2>
+
+			<div class="div73"><img src="Quetzal.png"></div>
+			<h2>Quetzal</h2>
+
+			<div class="div47"><img src="Raptor.png"></div>
+			<h2>Raptor</h2>
+
+			<div class="div48"><img src="Rinoceronte.png"></div>
+			<h2>Rinoceronte</h2>
+			<div class="div74"><img src="Sirena.png"></div>
+			<h2>Sirena</h2>
+
+			<div class="div49"><img src="Tiburón.png"></div>
+			<h2>Tiburón</h2>
+
+			<div class="div50"><img src="Tigre.png"></div>
+			<h2>Tigre</h2>
+
+			<div class="div51"><img src="Toro.png"></div>
+			<h2>Toro</h2>
+
+			<div class="div52"><img src="Tortuga.png"></div>
+			<h2>Tortuga</h2>
+
+			<div class="div53"><img src="Tucán.png"></div>
+			<h2>Tucán</h2>
+
+			<div class="div54"><img src="Unicornio.png"></div>
+			<h2>Unicornio</h2>
+
+			<div class="div55"><img src="Vaca.png"></div>
+			<h2>Vaca</h2>
+
+			<div class="div56"><img src="Venado.png"></div>
+			<h2>Venado</h2>
+
+			<div class="div57"><img src="Yeti.png"></div>
+			<h2>Yeti</h2>
+
+			<div class="div58"><img src="Zorro.png"></div>
+			<h2>Zorro</h2>
 		</main>
 		<footer>
 			<small></small>
 		</footer>
-	</div>
+	</div> -->
+
+	<script src="js.js"></script>
 </body>
+
 </html>
-
-
-
-
-<!-- <figure class="div1"><img src="Abeja.png"></div>
-		<figure class="div2"><img src="Águila.png"></div>
-		<figure class="div3"><img src="Araña.png"></div>
-		<figure class="div4"><img src="Bisonte.png"></div>
-		<figure class="div5"><img src="Búfalo.png"></div>
-		<figure class="div6"><img src="Cabra.png"></div>
-		<figure class="div7"><img src="Carnero.png"></div>
-		<figure class="div8"><img src="Castor.png"></div>
-		<figure class="div9"><img src="Cerdo.png"></div>
-		<figure class="div10"><img src="Cerbero.png"></div>
-		<figure class="div11"><img src="Cobra.png"></div>
-		<figure class="div12"><img src="Cocodrilo.png"></div>
-		<figure class="div13"><img src="Conejo.png"></div>
-		<figure class="div14"><img src="Cuervo.png"></div>
-		<figure class="div15"><img src="Dinosaurio.png"></div>
-		<figure class="div16"><img src="Dragón.png"></div>
-		<figure class="div17"><img src="Elefante.png"></div>
-		<figure class="div18"><img src="Esfinge.png"></div>
-		<figure class="div19"><img src="Fénix.png"></div>
-		<figure class="div20"><img src="Foca.png"></div>
-		<figure class="div21"><img src="Gallo.png"></div>
-		<figure class="div22"><img src="Gato.png"></div>
-		<figure class="div23"><img src="Goblin.png"></div>
-		<figure class="div24"><img src="Guepardo.png"></div>
-		<figure class="div25"><img src="Halcón.png"></div>
-		<figure class="div26"><img src="Hámster.png"></div>
-		<figure class="div27"><img src="Hiena.png"></div>
-		<figure class="div28"><img src="Jafuar.png"></div>
-		<figure class="div29"><img src="Jirafa.png"></div>
-		<figure class="div30"><img src="Koala.png"></div>
-		<figure class="div31"><img src="Komodo.png"></div>
-		<figure class="div32"><img src="León.png"></div>
-		<figure class="div33"><img src="Lince.png"></div>
-		<figure class="div34"><img src="Lobo.png"></div>
-		<figure class="div35"><img src="Mamut.png"></div>
-		<figure class="div36"><img src="Mapache.png"></div>
-		<figure class="div37"><img src="Orca.png"></div>
-		<figure class="div38"><img src="Oso.png"></div>
-		<figure class="div39"><img src="Paloma.png"></div>
-		<figure class="div40"><img src="Panda.png"></div>
-		<figure class="div41"><img src="Pantera.png"></div>
-		<figure class="div42"><img src="Pato.png"></div>
-		<figure class="div43"><img src="Pegaso.png"></div>
-		<figure class="div44"><img src="Perico.png"></div>
-		<figure class="div45"><img src="Perro.png"></div>
-		<figure class="div46"><img src="Pulpo.png"></div>
-		<figure class="div47"><img src="Raptor.png"></div>
-		<figure class="div48"><img src="Rinoceronte.png"></div>
-		<figure class="div49"><img src="Tiburón.png"></div>
-		<figure class="div50"><img src="Tigre.png"></div>
-		<figure class="div51"><img src="Toro.png"></div>
-		<figure class="div52"><img src="Tortuga.png"></div>
-		<figure class="div53"><img src="Tucán.png"></div>
-		<figure class="div54"><img src="Unicornio.png"></div>
-		<figure class="div55"><img src="Vaca.png"></div>
-		<figure class="div56"><img src="Venado.png"></div>
-		<figure class="div57"><img src="Yeti.png"></div>
-		<figure class="div58"><img src="Zorro.png"></div>
- -->
