falta de ortografia

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			</div>
 
 			<div class="div28"><img src="Jafuar.png">
-				<h2>Jafuar</h2>
+				<h2>Jaguar</h2>
 			</div>
 
 			<div class="div29"><img src="Jirafa.png">
