--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
 				<h2>Hámster</h2>
 			</div>
 
+			<div class="div26"><img src="Harpia.png">
+				<h2>Harpia</h2>
+			</div>
+
 			<div class="div27"><img src="Hiena.png">
 				<h2>Hiena</h2>
 			</div>
@@ -208,6 +212,10 @@
 
 			<div class="div70"><img src="Minotauro.png">
 				<h2>Minotauro</h2>
+			</div>
+
+			<div class="div70"><img src="Murcielago.png">
+				<h2>Murcielago</h2>
 			</div>
 
 			<div class="div71"><img src="Nutria.png">
